fix scrolling issue
fixed overflowing width

--- a/src/app/components/landing/landing.component.scss
+++ b/src/app/components/landing/landing.component.scss
@@ -5,8 +5,8 @@ $convert-to-mobile-width: 1060px;
 
 section#landing-page{
     overflow: hidden;
-    width: 100vw;
-    height: 100%;
+    width: 100%;
+    height: 100vh;
     background: #f1be91;
     background-size: cover;
     display: flex;
