--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -1,5 +1,5 @@
 #menu-wrapper{
-    height: 100%;
-    width: 100vw;
+    height: 100vh;
+    width: 100%;
     display: block;
 }
